If thread not running on stop, don't error.

--- a/about.html
+++ b/about.html
@@ -346,13 +346,13 @@ segment in the sorted segments list, and thus
 the segment responsible for outputting the audio
 data.
 
-See <a href="#HARMONY:SERVER">SERVER</a></pre></div> </article> </li><li> <a name="HARMONY:DIRECTION"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:DIRECTION">DIRECTION</a></code></h4> <code class="qualifiers"></code> <code class="arguments">SEGMENT2846</code><code>)</code>  </header> <div class="docstring"><pre>Accessor for the direction the listener is facing in space.
+See <a href="#HARMONY:SERVER">SERVER</a></pre></div> </article> </li><li> <a name="HARMONY:DIRECTION"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:DIRECTION">DIRECTION</a></code></h4> <code class="qualifiers"></code> <code class="arguments">SEGMENT2110</code><code>)</code>  </header> <div class="docstring"><pre>Accessor for the direction the listener is facing in space.
 
 To set a vector, the value should be a list or a vector
 of three floats. When reading, the returned value is
 always a vector of three floats.
 
-See <a href="http://l1sp.org/cl/space">SPACE</a></pre></div> </article> </li><li> <a name="HARMONY:DOPPLER-FACTOR"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:DOPPLER-FACTOR">DOPPLER-FACTOR</a></code></h4> <code class="qualifiers"></code> <code class="arguments">SEGMENT3261</code><code>)</code>  </header> <div class="docstring"><pre>Accessor to the over-/under-statement factor of the doppler effect.
+See <a href="http://l1sp.org/cl/space">SPACE</a></pre></div> </article> </li><li> <a name="HARMONY:DOPPLER-FACTOR"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:DOPPLER-FACTOR">DOPPLER-FACTOR</a></code></h4> <code class="qualifiers"></code> <code class="arguments">SEGMENT2429</code><code>)</code>  </header> <div class="docstring"><pre>Accessor to the over-/under-statement factor of the doppler effect.
 
 See <a href="http://l1sp.org/cl/space">SPACE</a></pre></div> </article> </li><li> <a name="HARMONY:ENDED-P"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:ENDED-P">ENDED-P</a></code></h4> <code class="qualifiers"></code> <code class="arguments">OBJECT</code><code>)</code>  </header> <div class="docstring"><pre>Accessor to whether the source has reached its end or not.
 
@@ -368,7 +368,7 @@ See <a href="#HARMONY:STOP">STOP</a>
 See <a href="#HARMONY:RESUME">RESUME</a></pre></div> </article> </li><li> <a name="HARMONY:INPUT"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:INPUT">INPUT</a></code></h4> <code class="qualifiers"></code> <code class="arguments">LOCATION SEGMENT</code><code>)</code>  </header> <div class="docstring"><pre>Accessor to the input buffer at the specified location of the segment.
 
 See <a href="NIL">INPUT-FIELD</a>
-See <a href="#HARMONY:SEGMENT">SEGMENT</a></pre></div> </article> </li><li> <a name="HARMONY:LOCATION"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:LOCATION">LOCATION</a></code></h4> <code class="qualifiers"></code> <code class="arguments">SEGMENT2720</code><code>)</code>  </header> <div class="docstring"><pre>Accessor for the location of the listener in space.
+See <a href="#HARMONY:SEGMENT">SEGMENT</a></pre></div> </article> </li><li> <a name="HARMONY:LOCATION"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:LOCATION">LOCATION</a></code></h4> <code class="qualifiers"></code> <code class="arguments">SEGMENT2016</code><code>)</code>  </header> <div class="docstring"><pre>Accessor for the location of the listener in space.
 
 To set a vector, the value should be a list or a vector
 of three floats. When reading, the returned value is
@@ -376,9 +376,9 @@ always a vector of three floats.
 
 See <a href="http://l1sp.org/cl/space">SPACE</a></pre></div> </article> </li><li> <a name="HARMONY:LOOPING-P"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:LOOPING-P">LOOPING-P</a></code></h4> <code class="qualifiers"></code> <code class="arguments">OBJECT</code><code>)</code>  </header> <div class="docstring"><pre>Accessor to whether the source should loop after finishing.
 
-See <a href="#HARMONY:SOURCE">SOURCE</a></pre></div> </article> </li><li> <a name="HARMONY:MAX-DISTANCE"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:MAX-DISTANCE">MAX-DISTANCE</a></code></h4> <code class="qualifiers"></code> <code class="arguments">SEGMENT3407</code><code>)</code>  </header> <div class="docstring"><pre>Accessor to the maximal distance above which the source is inaudible.
+See <a href="#HARMONY:SOURCE">SOURCE</a></pre></div> </article> </li><li> <a name="HARMONY:MAX-DISTANCE"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:MAX-DISTANCE">MAX-DISTANCE</a></code></h4> <code class="qualifiers"></code> <code class="arguments">SEGMENT2543</code><code>)</code>  </header> <div class="docstring"><pre>Accessor to the maximal distance above which the source is inaudible.
 
-See <a href="http://l1sp.org/cl/space">SPACE</a></pre></div> </article> </li><li> <a name="HARMONY:MIN-DISTANCE"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:MIN-DISTANCE">MIN-DISTANCE</a></code></h4> <code class="qualifiers"></code> <code class="arguments">SEGMENT3334</code><code>)</code>  </header> <div class="docstring"><pre>Accessor to the minimal distance below which the source is at max volume.
+See <a href="http://l1sp.org/cl/space">SPACE</a></pre></div> </article> </li><li> <a name="HARMONY:MIN-DISTANCE"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:MIN-DISTANCE">MIN-DISTANCE</a></code></h4> <code class="qualifiers"></code> <code class="arguments">SEGMENT2486</code><code>)</code>  </header> <div class="docstring"><pre>Accessor to the minimal distance below which the source is at max volume.
 
 See <a href="http://l1sp.org/cl/space">SPACE</a></pre></div> </article> </li><li> <a name="HARMONY:MIXER"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:MIXER">MIXER</a></code></h4> <code class="qualifiers"></code> <code class="arguments">OBJECT</code><code>)</code>  </header> <div class="docstring"><pre>Accessor to the mixer that this source was added to.
 
@@ -391,7 +391,7 @@ See <a href="#HARMONY:SEGMENT">SEGMENT</a></pre></div> </article> </li><li> <a n
 
 See <a href="#HARMONY:SOURCE">SOURCE</a>
 See <a href="#HARMONY:PAUSE">PAUSE</a>
-See <a href="#HARMONY:RESUME">RESUME</a></pre></div> </article> </li><li> <a name="HARMONY:ROLLOFF"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:ROLLOFF">ROLLOFF</a></code></h4> <code class="qualifiers"></code> <code class="arguments">SEGMENT3480</code><code>)</code>  </header> <div class="docstring"><pre>Accessor to the rolloff factor that describes the curvature of the attenuation function.
+See <a href="#HARMONY:RESUME">RESUME</a></pre></div> </article> </li><li> <a name="HARMONY:ROLLOFF"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:ROLLOFF">ROLLOFF</a></code></h4> <code class="qualifiers"></code> <code class="arguments">SEGMENT2600</code><code>)</code>  </header> <div class="docstring"><pre>Accessor to the rolloff factor that describes the curvature of the attenuation function.
 
 See <a href="http://l1sp.org/cl/space">SPACE</a></pre></div> </article> </li><li> <a name="HARMONY:SAMPLE-POSITION"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:SAMPLE-POSITION">SAMPLE-POSITION</a></code></h4> <code class="qualifiers"></code> <code class="arguments">OBJECT</code><code>)</code>  </header> <div class="docstring"><pre>Returns the sample counter for the source.
 
@@ -414,7 +414,7 @@ assembled.
 See <a href="NIL">SEGMENT-MAP</a>
 See <a href="#HARMONY:SERVER">SERVER</a></pre></div> </article> </li><li> <a name="HARMONY:SERVER"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:SERVER">SERVER</a></code></h4> <code class="qualifiers"></code> <code class="arguments">OBJECT</code><code>)</code>  </header> <div class="docstring"><pre>Accessor to the segment's server.
 
-See <a href="#HARMONY:SEGMENT">SEGMENT</a></pre></div> </article> </li><li> <a name="HARMONY:SOUNDSPEED"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:SOUNDSPEED">SOUNDSPEED</a></code></h4> <code class="qualifiers"></code> <code class="arguments">SEGMENT3188</code><code>)</code>  </header> <div class="docstring"><pre>Accessor to the speed of sound in space.
+See <a href="#HARMONY:SEGMENT">SEGMENT</a></pre></div> </article> </li><li> <a name="HARMONY:SOUNDSPEED"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:SOUNDSPEED">SOUNDSPEED</a></code></h4> <code class="qualifiers"></code> <code class="arguments">SEGMENT2372</code><code>)</code>  </header> <div class="docstring"><pre>Accessor to the speed of sound in space.
 
 This value only influences the strength of
 the doppler factor.
@@ -425,19 +425,19 @@ The name should be a string designating the file
 type, and the value a source class name.
 
 See <a href="NIL">*FILETYPE-SOURCE-MAP*</a>
-See <a href="#HARMONY:DEFINE-SOURCE-TYPE">DEFINE-SOURCE-TYPE</a></pre></div> </article> </li><li> <a name="HARMONY:UP"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:UP">UP</a></code></h4> <code class="qualifiers"></code> <code class="arguments">SEGMENT2909</code><code>)</code>  </header> <div class="docstring"><pre>Accessor for the vector representing &quot;upwards&quot; in space.
+See <a href="#HARMONY:DEFINE-SOURCE-TYPE">DEFINE-SOURCE-TYPE</a></pre></div> </article> </li><li> <a name="HARMONY:UP"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:UP">UP</a></code></h4> <code class="qualifiers"></code> <code class="arguments">SEGMENT2157</code><code>)</code>  </header> <div class="docstring"><pre>Accessor for the vector representing &quot;upwards&quot; in space.
 
 To set a vector, the value should be a list or a vector
 of three floats. When reading, the returned value is
 always a vector of three floats.
 
-See <a href="http://l1sp.org/cl/space">SPACE</a></pre></div> </article> </li><li> <a name="HARMONY:VELOCITY"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:VELOCITY">VELOCITY</a></code></h4> <code class="qualifiers"></code> <code class="arguments">SEGMENT2783</code><code>)</code>  </header> <div class="docstring"><pre>Accessor for the velocity of the listener in space.
+See <a href="http://l1sp.org/cl/space">SPACE</a></pre></div> </article> </li><li> <a name="HARMONY:VELOCITY"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:VELOCITY">VELOCITY</a></code></h4> <code class="qualifiers"></code> <code class="arguments">SEGMENT2063</code><code>)</code>  </header> <div class="docstring"><pre>Accessor for the velocity of the listener in space.
 
 To set a vector, the value should be a list or a vector
 of three floats. When reading, the returned value is
 always a vector of three floats.
 
-See <a href="http://l1sp.org/cl/space">SPACE</a></pre></div> </article> </li><li> <a name="HARMONY:VOLUME"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:VOLUME">VOLUME</a></code></h4> <code class="qualifiers"></code> <code class="arguments">SEGMENT813</code><code>)</code>  </header> <div class="docstring"><pre>Accessor to the outputting volume of the general segment.
+See <a href="http://l1sp.org/cl/space">SPACE</a></pre></div> </article> </li><li> <a name="HARMONY:VOLUME"> </a> <article> <header class="accessor"> <span class="type">accessor</span>  <code>(</code><h4 class="name"><code><a href="#HARMONY:VOLUME">VOLUME</a></code></h4> <code class="qualifiers"></code> <code class="arguments">SEGMENT585</code><code>)</code>  </header> <div class="docstring"><pre>Accessor to the outputting volume of the general segment.
 
 Must be in the range [0, infinity[.
 
@@ -634,7 +634,7 @@ See <a href="#HARMONY:STOP">STOP</a></pre></div> </article> </li><li> <a name="H
 
 When the server is stopped, its background processing
 thread is shut down. If no thread is currently
-running, an error is signalled.
+running, nothing happens.
 
 When a source is stopped, its ENDED-P property is
 set to T.
